--- a/IMT_Pandas_I.ipynb
+++ b/IMT_Pandas_I.ipynb
@@ -59,10 +59,9 @@
         "# **Seleção e Organização de Dados com Pandas**\n",
         "---\n",
         "Nesta aula vamos aprender:\n",
-        "- O que é um Processo de Ciência de Dados\n",
-        "- Entender o modelo de processo CRISP-DM, o ainda mais empregado pela indústria\n",
-        "- Conhecer alternativas ao processo CRISP-DM\n",
-        "\n",
+        "- Introdução ao `Pandas`\n",
+        "- Estrutura dos `Pandas`\n",
+        "- Acesso de arquivos no Colab e Inspeção inicial dos dados\n",
         "<br>\n",
         "\n",
         "<small><b>(\\*) Este material pode ser o material empregado para mais de uma aula de `Pandas`\n"
