--- a/IMT_ex_combine_reshape_yahoo.ipynb
+++ b/IMT_ex_combine_reshape_yahoo.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jf4DkEBpGdr4"
       },
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "du86XS6HFoqN"
       },
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -471,7 +471,7 @@
         "outputId": "a333f820-ee17-4756-a943-58bc5621f323",
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,7 +708,7 @@
       "cell_type": "code",
       "source": [
         "#@markdown Must be `True`\n",
-        "len(df) == 1520"
+        "df.shape == (1520, 6)"
       ],
       "metadata": {
         "colab": {
@@ -778,7 +778,7 @@
         "cellView": "form",
         "id": "5dd0SB9zX1vP"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1034,7 +1034,7 @@
         "id": "-GxXDdDya67p",
         "cellView": "form"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1199,7 +1199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "7ezOK6QNzVYY"
       },
@@ -1218,7 +1218,7 @@
         "id": "pv8kP21SdEFJ",
         "cellView": "form"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1288,7 +1288,7 @@
         "cellView": "form",
         "id": "jW1DHIr-fsTH"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
