--- a/Practical_Distributions_HTests.ipynb
+++ b/Practical_Distributions_HTests.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNyDmAgyzxTp27Trhpp3TzK",
+      "authorship_tag": "ABX9TyNkZsSs2RaLcC23RQjAkWUF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +50,15 @@
       ],
       "metadata": {
         "id": "GE4Z46DhYV_N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## [NetFlix, What is an A/B Test?](https://netflixtechblog.com/what-is-an-a-b-test-b08cc1b57962)"
+      ],
+      "metadata": {
+        "id": "yRq9ayEAm4ph"
       }
     },
     {
@@ -270,7 +278,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 362
+          "height": 342
         },
         "id": "TAcO4TTeUmHo",
         "outputId": "466838bd-51d2-4f69-b6b0-966b4d322c00"
@@ -333,7 +341,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 342
         },
         "id": "H-OuUTN68J6s",
         "outputId": "5c4b99f7-e4a1-44de-f13c-71fafd70f77d"
@@ -517,7 +525,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 307
         },
         "id": "cn9Yxb3AppYZ",
         "outputId": "07798fc0-e303-4b37-b4ff-49b7148da37e"
@@ -654,7 +662,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 307
         },
         "id": "3Aehe8Yiyj7r",
         "outputId": "4b4f4398-5b92-410e-f36f-f9ea7aa6b05b"
@@ -915,7 +923,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 307
         },
         "id": "pcrV9eZT0oqj",
         "outputId": "696e1d03-750e-4a94-df70-db98ba561cce"
@@ -1056,7 +1064,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 342
         },
         "id": "xzdoHrvsAe_8",
         "outputId": "17ccc047-21d6-4204-cda4-56b26f3dc67e"
@@ -1114,7 +1122,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 362
+          "height": 342
         },
         "id": "Yhkuc3QIBfPe",
         "outputId": "a8c5a191-5e28-4145-d7e4-97972d0d816d"
@@ -1172,7 +1180,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 342
         },
         "id": "a9lWUsavCJ6b",
         "outputId": "365eff78-0782-4cfe-806b-9e37178620c4"
@@ -1233,7 +1241,7 @@
         "outputId": "c228fbd0-1022-4af4-f764-53db583a20ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 329
+          "height": 342
         },
         "id": "4pOOlXx7Cti8"
       },
@@ -2304,7 +2312,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 294
+          "height": 307
         },
         "id": "Y5XpIhMqdIV5",
         "outputId": "cf46ab73-3f13-43d8-e3ec-6aac6b76e130"
