--- a/IMT_ex_hipoteses.ipynb
+++ b/IMT_ex_hipoteses.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4dwRLEjlMdwGGtMeN6S7j",
+      "authorship_tag": "ABX9TyMw8xAty/5f9tqbj0Ucm+6k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,14 +44,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Lab: Acessando arquivos\n",
+        "# Lab: Distribuições e Testes de Hipóteses\n",
         "\n",
         "Referências e Materiais úteis para este Lab:\n",
         "\n",
-        "- [Carregar dados: Drive, Planilhas e Google Cloud Storage](/notebooks/io.ipynb) \n",
-        "- [w3schools](https://www.w3schools.com/python/python_file_open.asp), veja aqui como ler um arquivo .txt com `Python`\n",
+        "[Prático de Distribuições e Testes de Hipóteses](https://colab.research.google.com/github/Rogerio-mack/IMT_Ciencia_de_Dados/blob/main/Practical_Distributions_HTests.ipynb)\n",
         "\n",
         "---\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -96,11 +97,7 @@
         "sigma = 800\n",
         "prob = np.linspace(0,1,1000)\n",
         "\n",
-        "ppf = []\n",
-        "for p in prob:\n",
-        "  ppf.append(norm.ppf(p,loc=mu,scale=sigma)) \n",
-        "\n",
-        "ppf = np.array(ppf)\n",
+        "ppf = norm.ppf(prob,loc=mu,scale=sigma) \n",
         "\n",
         "fig, ax = plt.subplots()\n",
         "\n",
@@ -176,25 +173,10 @@
         "# seu código"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T0FQHhJlBYLZ",
-        "outputId": "511ebcc2-3d24-45ee-8abc-a19a7ca832bd"
+        "id": "T0FQHhJlBYLZ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.16947297216771973"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
