--- a/IMT_EDA.ipynb
+++ b/IMT_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPXgEDE6mOhTYWsrok+V+WL",
+      "authorship_tag": "ABX9TyPvObSaALF4eNzTrF+35sow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Casos de Análise Exploratória"
-      ],
       "metadata": {
-        "id": "lRm0djGCavt4"
-      }
+        "id": "40b90843"
+      },
+      "source": [
+        "\n",
+        "# Casos de Análise Exploratória \n",
+        "---"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -59,7 +61,7 @@
       "source": [
         "Nesta aula você entenderá:\n",
         "\n",
-        "* Como criar Análises Exploratórias de Dados \n",
+        "* Como criar Análises Exploratórias de Dados  \n",
         "* Como empregar Seleções e Visualizações dos dados para responder perguntas e verificar hipóteses sobre os dados\n",
         "* O que é e como verificar correlações entre variáveis numéricas e explorar  relações entre variáveis categóricas com tabelas de contingência"
       ]
