--- a/IMT_Lab_Regressao.ipynb
+++ b/IMT_Lab_Regressao.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS5dXT5FjNNcLsVIN5tcVV",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO9fyEgKqthtgnsrrG2TRIY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,7 @@
       "metadata": {
         "id": "oiXYMYIMLG-I"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,9 +64,14 @@
       "source": [
         "# Exercício\n",
         "\n",
+        "Construa os modelos abaixo e para cada modelo calcule o comprimento de pétala para um exemplar que tenha todas medidas 10% acima da média de medida de sua espécie.\n",
+        "\n",
         "1. Determine a melhor regressão linear simples para determinar comprimento de pétalas\n",
-        "2. Determine a melhor regressão múltipla simples para determinar comprimento de pétalas empregando somente aributos numéricos\n",
-        "3. Inclua no modelo anterior o artibuto `species`"
+        "2. Determine a melhor regressão múltipla para determinar comprimento de pétalas empregando somente aributos numéricos\n",
+        "3. Inclua no modelo anterior o artibuto `species`\n",
+        "\n",
+        "Vamos começar empregando a biblioteca `statsmodel`.\n",
+        "\n"
       ],
       "metadata": {
         "id": "IIsKF2NGKyJk"
@@ -85,7 +91,7 @@
         "id": "5-Pob9YaK2Ni",
         "outputId": "555eee54-990e-469e-c0c2-1754d6c303b9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +263,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Aproximando uma Função Linear\n",
+        "# Aproximando uma Função Linear\n",
         "\n",
         "E. Dolbear, em “The cricket as a thermometer”, American Naturalist (1897) 31, 970-971 mostrou que a frequencia do canto (gorgeio) de grilos por minuto poderia ser empregada para *estimar* a temperatura ambiente: \n",
         "\n",
@@ -562,7 +568,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Esquema Geral do Aprendizado Supervisionado \n",
+        "# Esquema Geral do Aprendizado Supervisionado \n",
         "\n",
         "Todos os modelos de Aprendizado Supervisionado, isto é, modelos que empregam um conjunto de exemplos (*conjunto de treinamento*) de entradas e suas saídas, como o conjunto de dados de gorgeios/min e temperaturas acima, seguem um mesmo esquema de geral de uso:\n",
         "\n",
@@ -892,7 +898,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Esquema Geral do Aprendizado Supervisionado com o `scikit-learn`\n",
+        "# Esquema Geral do Aprendizado Supervisionado com o `scikit-learn`\n",
         "\n",
         "O `scikit-learn` é um dos mais populares frameworks de aprendizado de máquina em `Python` e tem diferentes modelos de aprendizado supervisionado e não supervisionados. Todos os modelos empregam um esquema similar de aplicação baseado em *estimadores*. A figura 1 apresenta para cada etapa do Aprendizado Supervisionado os respectivos comandos no uso de estimadores do `scikit-learn`. \n",
         "\n",
