--- a/IMT_Lab_Regressao.ipynb
+++ b/IMT_Lab_Regressao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhqr+mKhtWWTMOXZs27/Zy",
+      "authorship_tag": "ABX9TyO3MIo1atEoPQzhbKbwgzLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "\n",
         "Construa os modelos abaixo e para cada modelo calcule o comprimento de pétala para um exemplar que tenha todas medidas 10% acima da média de medida de sua espécie.\n",
         "\n",
-        "1. Determine a melhor regressão linear simples para determinar comprimento de pétalas (empregue aqui só os atributos numéricos)\n",
+        "1. Determine a melhor regressão linear simples para determinar comprimento de pétalas a partir dos demais atributos numéricos\n",
         "2. Determine a melhor regressão múltipla para determinar comprimento de pétalas empregando somente aributos numéricos\n",
         "3. Inclua no modelo anterior o artibuto `species`\n",
         "\n",
