--- a/IMT_Projeto_I.ipynb
+++ b/IMT_Projeto_I.ipynb
@@ -110,7 +110,7 @@
         "2. Notebooks `python` do projeto, com **`.ipynb` 100% executáveis** com a aquisição, preparação e todas as análises desenvolvidas. Os notebooks devem ser contruídos na forma de um Relatório tendo, além dos códigos, \n",
         "uma  **Descrição dos Procedimentos e Resultados**.\n",
         "\n",
-        "3. **Datafólio** de resultados\n",
+        "3. **Datafólio** de resultados. Veja exemplos de Datafólios em um desses sites: [correlation-one](https://www.correlation-one.com/blog/last-mile-of-the-data-science-workflow) e [c1-connect](https://c1-connect.com/showcase)\n",
         "\n",
         "4. Dados originais empregados (ou links de acesso) e dados intermediários produzidos. Os notebooks devem acessar os dados e executarem sem a necessidade de procedimentos externos (como download ou upload de dados pelo usuário) \n",
         "\n",
