--- a/IMT_Projeto_I.ipynb
+++ b/IMT_Projeto_I.ipynb
@@ -146,7 +146,7 @@
         "> A apresentação das técnicas e dos resultados é clara, objetiva e bem cuidada?  \n",
         ">* Notebook\n",
         ">* Datafólio\n",
-        ">* Vídeo ou apresentações ao vivo\n",
+        ">* Apresentações ao vivo ou vídeo (*Atenção: Vídeo, somente nos casos quando não pudermos ter, por conta do calendário, apresentações ao vivo*)\n",
         "\n",
         "5. **Conclusão**\n",
         "\n",
