--- a/IMT_regressao_scale.ipynb
+++ b/IMT_regressao_scale.ipynb
@@ -31,8 +31,7 @@
         "Neste laboratório:\n",
         "\n",
         "1. Reveja os modelos de regressão linear com statsmodel\n",
-        "2. Entenda os efeitos da normalização\n",
-        "3. Entenda como e por que utilizar estimadores do scikit-learn para normalização"
+        "2. Entenda os efeitos da normalização\n"
       ],
       "metadata": {
         "id": "7dDp1pcezGvA"
@@ -40,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "g5rumCMoqcAO"
       },
@@ -52,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -445,44 +444,17 @@
       "source": [
         "# Q8.\n",
         "\n",
-        "A normalização não afeta o resultado de modelos de regressão"
+        "A normalização não afeta o resultado de modelos de regressão. **Verdadeiro ou Falso?**"
       ],
       "metadata": {
         "id": "w5CUi780yvcd"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ooX0-4YDDV3e"
-      },
-      "source": [
-        "# MinMax scikit-learn, função"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1isX7BgdLfIq"
-      },
-      "source": [
-        "# MinMax scikit-learn, estimador"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Incluindo o Bairro"
-      ],
-      "metadata": {
-        "id": "0ckp3PV3OJ1B"
       }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAGgeweNXxp7w7NNTWzbZ7",
+      "authorship_tag": "ABX9TyMQOuqicaf5tDVP5Kje+Bz3",
       "include_colab_link": true
     },
     "kernelspec": {
