--- a/IMT_estimadores_scikit_learn2.ipynb
+++ b/IMT_estimadores_scikit_learn2.ipynb
@@ -612,7 +612,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Seu código"
+        "# Seu código\n",
+        "\n",
+        "...\n",
+        "\n",
+        "# Separação dos Conjuntos de Treinamento e Teste\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, test_size=0.3, random_state=1)\n",
+        "\n",
+        "..."
       ],
       "metadata": {
         "id": "3bLtlOt_Na9O"
@@ -1082,7 +1089,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3/RuFRakTT9ZAvSELPpG2",
       "include_colab_link": true
     },
     "kernelspec": {
