--- a/IMT_RForest_SelModels_Desafio.ipynb
+++ b/IMT_RForest_SelModels_Desafio.ipynb
@@ -79,7 +79,7 @@
         "from matplotlib.lines import Line2D\n",
         "import seaborn as sns"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "Y7a_PeUNUno2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         "df = pd.read_csv('http://meusite.mackenzie.br/rogerio/ML/PlayBallcsv.csv')\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
         "\n",
         "pd.concat([ df_labels, df[['Play ball']] ], axis=1).head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
         "y_pred = clf.predict(X)\n",
         "print( clf.score(X,y) )\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +777,7 @@
         "graph.render('graph_cartoons') # para gravação em .pdf\n",
         "graph"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
         "print(mutual_info_classif(X, y, discrete_features=True))\n",
         "print(clf.feature_importances_)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,7 +851,7 @@
         "id": "j9WKdXKiUIy1",
         "outputId": "d1cdfa17-161c-4261-8be4-6f09cb0334ee"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +929,7 @@
         "df.rename(columns={'Vote_0':'class'},inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1262,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1299,7 +1299,7 @@
       "source": [
         "df.isnull().sum().sum()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1325,7 +1325,7 @@
       "source": [
         "(df == '?').sum()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1382,7 +1382,7 @@
         "\n",
         "pd.concat([ df_labels, df[['class']] ], axis=1).head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1735,7 +1735,7 @@
         "print('\\nClassification Report:\\n')\n",
         "print(classification_report(y_test, y_pred))\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1792,7 +1792,7 @@
         "graph.render('graph_democratic') # para gravação em .pdf\n",
         "graph"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1834,7 +1834,7 @@
         "print(clf.feature_importances_)\n",
         "print(X.columns[ clf.feature_importances_.argmax() ])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1870,7 +1870,7 @@
         "id": "43PBZjVZugOC",
         "outputId": "9d2c7afb-fcce-42fb-f2d6-55eed81256ad"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1896,7 +1896,7 @@
         "id": "97_O-kaQtrh2",
         "outputId": "4b5593fb-2537-4a3b-de9b-f25f46707a59"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1969,7 +1969,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2096,7 +2096,7 @@
         "graph.render('graph_democratic') # para gravação em .pdf\n",
         "graph"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2162,7 +2162,7 @@
       "metadata": {
         "id": "-SlQWN7sHxiE"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2181,7 +2181,7 @@
         "\n",
         "Mini-desafio em grupo. Empregando os recursos e algoritmos conhecidos até aqui (caso queira empregar um recurso não visto em sala, verifique antes com o professor) cada equipe deve buscar chegar no melhor resultado da acuracidade determinação do Risco de Pacientes.\n",
         "\n",
-        "Após a construção dos modelos os modelos serão testados em dois novos conjuntos de dados.\n",
+        "Após a construção dos modelos os modelos serão testados em dois novos conjuntos de dados [test1](https://github.com/Rogerio-mack/IMT_Ciencia_de_Dados/raw/main/data/blood_test1_noanswers.csv) e [test2](https://github.com/Rogerio-mack/IMT_Ciencia_de_Dados/raw/main/data/blood_test2_noanswers.csv).\n",
         "\n",
         "* [0 25 50 75 **100**] Melhores resultados nos 2 dois novos conjuntos de dados, $10.0$\n",
         "* [0 25 50 **75** **99**] Melhores resultados nos 2 dois novos conjuntos de dados, $9.0$\n",
@@ -2207,7 +2207,7 @@
         "id": "T1KnpqxNv1rl",
         "outputId": "e32188bc-1bda-4be1-80cb-0dfb37454507"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
