--- a/IMT_RForest_SelModels_Desafio.ipynb
+++ b/IMT_RForest_SelModels_Desafio.ipynb
@@ -2187,7 +2187,8 @@
         "* [0 25 50 **75** **99**] Melhores resultados nos 2 dois novos conjuntos de dados, $9.0$\n",
         "* [0 25 **50** **74** 100] Melhores resultados nos 2 dois novos conjuntos de dados, $7.0$\n",
         "* [**0 25 49** 75 100] Melhores resultados nos 2 dois novos conjuntos de dados, $6.0$\n",
-        "\n"
+        "\n",
+        "Deposite suas soluções [aqui](https://drive.google.com/drive/folders/1LalGwsZW8gIa8lEn98nF8miEFzRggVMz?usp=sharing). Os arquivos devem ser um dataframe para cada teste `blood_test<i>_g<n>.csv` com ao menos uma coluna `Risk` com a predição `Low`, `Medium` ou `High`."
       ],
       "metadata": {
         "id": "xiOStfUKWzUP"
