--- a/IMT_ROC.ipynb
+++ b/IMT_ROC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPggbx/VFYa0mUiW9UlDVtI",
+      "authorship_tag": "ABX9TyNqhOdSUHMwqDlTKhGR0G1B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -405,7 +405,9 @@
       "source": [
         "# Limitações\n",
         "\n",
-        "Infelizmente a curva ROC está limitada a análise de classificadores binários."
+        "Infelizmente a curva ROC está limitada a análise de classificadores binários. Apesar disso você pode querer acessar [Multiclass Receiver Operating Characteristic (ROC)](https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html) para o emprego da análise de modelos multiclasse.\n",
+        "\n",
+        "![imagem](https://scikit-learn.org/stable/_images/sphx_glr_plot_roc_003.png)"
       ],
       "metadata": {
         "id": "fP5c700-fExn"
