--- a/LLM_Python.ipynb
+++ b/LLM_Python.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "mount_file_id": "https://github.com/Rogerio-mack/ChatGPT_Python/blob/main/ChatGPT3_with_Python_online_presentation.ipynb",
-      "authorship_tag": "ABX9TyMaOcpbH5wrSVLNJgBor08u",
+      "mount_file_id": "https://github.com/Rogerio-mack/IMT_Ciencia_de_Dados/blob/main/LLM_Python.ipynb",
+      "authorship_tag": "ABX9TyNYuBKfqF1/5c+hJpUI+J3X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,13 +157,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mN_l1MLYeAWQ",
-        "outputId": "97696768-026a-4f1f-cdba-caf7a4e88172"
+        "outputId": "ea31e20c-cd95-44ee-bed0-81c71b0c398d"
       },
       "outputs": [
         {
@@ -173,7 +172,7 @@
           "text": [
             "Collecting openai\n",
             "  Downloading openai-0.28.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.5/76.5 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.5/76.5 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: requests>=2.20 in /usr/local/lib/python3.10/dist-packages (from openai) (2.31.0)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.1)\n",
             "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from openai) (3.8.5)\n",
@@ -213,7 +212,7 @@
       "metadata": {
         "id": "1OBWpC3_K9xG"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -229,7 +228,7 @@
       "metadata": {
         "id": "_-7vbT5wqJgi"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -251,7 +250,7 @@
       "metadata": {
         "id": "k4km6AyJLFTi"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -264,18 +263,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QPtEH3S5hzsn",
-        "outputId": "3461ae64-1625-4b70-9af3-6f26a62d8f47"
+        "outputId": "680506fa-d94c-48bd-834c-cee206a57394"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<OpenAIObject chat.completion id=chatcmpl-7xG8M4e5CM0YGQkw2JVYr4EDBAZAb at 0x7b71961cf1a0> JSON: {\n",
-              "  \"id\": \"chatcmpl-7xG8M4e5CM0YGQkw2JVYr4EDBAZAb\",\n",
+              "<OpenAIObject chat.completion id=chatcmpl-7xZarpd0D6UO6sWDxTlcnn4cjB6AC at 0x7c986adb9940> JSON: {\n",
+              "  \"id\": \"chatcmpl-7xZarpd0D6UO6sWDxTlcnn4cjB6AC\",\n",
               "  \"object\": \"chat.completion\",\n",
-              "  \"created\": 1694357726,\n",
+              "  \"created\": 1694432529,\n",
               "  \"model\": \"gpt-3.5-turbo-0613\",\n",
               "  \"choices\": [\n",
               "    {\n",
@@ -351,26 +350,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0lxPcNMWiEHf",
-        "outputId": "6d4cc56c-aeb4-45ed-d6d6-f90f3fed3ab7"
+        "outputId": "bcb17165-f62f-409b-da39-e999d91033c1"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Alguns dos principais concorrentes da OpenAI incluem:\n",
+            "Apesar de ser difícil identificar os principais concorrentes diretos da OpenAI, existem algumas empresas que são referências no campo da inteligência artificial e podem ser consideradas competidoras em alguns aspectos. Essas empresas incluem:\n",
             "\n",
-            "1. DeepMind (propriedade da Alphabet/Google)\n",
-            "2. Microsoft Research\n",
-            "3. Facebook AI Research (FAIR)\n",
-            "4. IBM Watson\n",
-            "5. Amazon Web Services (AWS) AI\n",
-            "6. Baidu Research\n",
-            "7. Tencent AI Lab\n",
-            "8. Apple AI Research\n",
-            "9. Salesforce Research\n",
-            "10. Intel AI Lab\n"
+            "1. Google (subsidiária da Alphabet Inc.): A Google possui diversas iniciativas relacionadas à inteligência artificial, incluindo o Google Brain e o DeepMind.\n",
+            "\n",
+            "2. Microsoft: A Microsoft está investindo fortemente em pesquisas e desenvolvimento de inteligência artificial por meio de seus projetos como o Microsoft Research e a Azure AI.\n",
+            "\n",
+            "3. Facebook: O Facebook possui uma série de projetos de pesquisa em inteligência artificial, como o Facebook AI Research (FAIR) e o uso de IA em suas plataformas.\n",
+            "\n",
+            "4. Tesla: Embora seja mais conhecida por sua tecnologia de veículos elétricos, a Tesla também está investindo em IA para desenvolver seus sistemas de direção autônoma.\n",
+            "\n",
+            "Essas empresas têm equipes de pesquisa em IA e estão ativamente explorando as aplicações dessa tecnologia. No entanto, é importante notar que a OpenAI tem uma missão mais ampla de desenvolver IA segura e benéfica para a humanidade, em vez de competir diretamente em mercados específicos.\n"
           ]
         }
       ]
@@ -394,7 +392,7 @@
       "metadata": {
         "id": "w8gVTV8ClPqD"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -412,7 +410,7 @@
       "metadata": {
         "id": "YfTY_oDbYCBa"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -426,9 +424,9 @@
           "height": 533
         },
         "id": "iMYwJxVRYE9D",
-        "outputId": "ad703f3f-67c3-4fb0-bf7d-89d9c3aacb28"
+        "outputId": "bcc1a8ed-7681-4437-f6a8-bd46545ea3b4"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,11 +435,42 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<img src =https://oaidalleapiprodscus.blob.core.windows.net/private/org-OtlsTGHPALyg5y0DiclJ0ARs/user-XllBpcoRITLYmFfSfiKOszjB/img-OzQiPV44hrAeXxuQqv7fHjo1.png?st=2023-09-10T17%3A54%3A52Z&se=2023-09-10T19%3A54%3A52Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-09-10T08%3A34%3A37Z&ske=2023-09-11T08%3A34%3A37Z&sks=b&skv=2021-08-06&sig=W2ygoe2Pl5eGutdTuli7ebyyJSAD6wGTA7zsJ7tjTYw%3D>"
+              "<img src =https://oaidalleapiprodscus.blob.core.windows.net/private/org-OtlsTGHPALyg5y0DiclJ0ARs/user-XllBpcoRITLYmFfSfiKOszjB/img-CL8iBt6ravdRP8xmhdLx0A9L.png?st=2023-09-11T10%3A43%3A52Z&se=2023-09-11T12%3A43%3A52Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-09-11T10%3A26%3A10Z&ske=2023-09-12T10%3A26%3A10Z&sks=b&skv=2021-08-06&sig=BH6YfOC6AL86ogLPqu7s0kVp/aRCnhB0NpkT5xlYzQE%3D>"
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = createImageWithGPT('Criar o quadro de Monalisa, mas no estilo Hieronymus Bosch')\n",
+        "fig"
+      ],
+      "metadata": {
+        "id": "1J59V92iDsEq",
+        "outputId": "d7d40602-7385-4469-e318-259e4857d92d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 533
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<img src =https://oaidalleapiprodscus.blob.core.windows.net/private/org-OtlsTGHPALyg5y0DiclJ0ARs/user-XllBpcoRITLYmFfSfiKOszjB/img-KmsStgsyOffyZTU7upUhh0fO.png?st=2023-09-11T10%3A45%3A12Z&se=2023-09-11T12%3A45%3A12Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-09-10T18%3A19%3A47Z&ske=2023-09-11T18%3A19%3A47Z&sks=b&skv=2021-08-06&sig=Z34X9qMGBej6EoQK3uNCvGKNcgT6acuC%2B3UCUUNXgrg%3D>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -2258,61 +2287,10 @@
         "print(response.choices[0].message.content)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KH5hcbDNu0Je",
-        "outputId": "d2088fc4-e619-4ac7-c03d-8669085d834a"
+        "id": "KH5hcbDNu0Je"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "import matplotlib.pyplot as plt\n",
-            "%matplotlib inline\n",
-            "from PIL import Image\n",
-            "import numpy as np\n",
-            "\n",
-            "# Read image\n",
-            "img = Image.open('/content/moccca7a-com-brinco-pecc81rola.webp').convert(\"L\")\n",
-            "new_size = (img.size[0] // 3, img.size[1] // 3)\n",
-            "img = img.resize(new_size, Image.LANCZOS)\n",
-            "\n",
-            "# Convert the image to a NumPy array\n",
-            "image_array = np.array(img)\n",
-            "\n",
-            "kernel3 = np.array([[-1/2, 0, -1/2],\n",
-            "                   [0,   4,    0],\n",
-            "                   [-1/2, 0, -1/2]])\n",
-            "\n",
-            "image_array_conv = np.zeros((image_array.shape[0]-2, image_array.shape[1]-2))\n",
-            "\n",
-            "for x in range(1, image_array.shape[0]-1):\n",
-            "  for y in range(1, image_array.shape[1]-1):\n",
-            "      # Get the values of the neighboring pixels\n",
-            "      neighbors = np.array([image_array[x-1, y-1], image_array[x, y-1], image_array[x+1, y-1],\n",
-            "                            image_array[x-1, y], image_array[x, y], image_array[x+1, y],\n",
-            "                            image_array[x-1, y+1], image_array[x, y+1], image_array[x+1, y+1]])\n",
-            "\n",
-            "      image_array_conv[x-1, y-1] = np.dot(neighbors, kernel3.flatten())\n",
-            "\n",
-            "image_conv = Image.fromarray(image_array_conv)\n",
-            "\n",
-            "plt.figure(figsize=(7, 3))\n",
-            "plt.subplot(1, 2, 1)\n",
-            "plt.imshow(img, cmap='gray')\n",
-            "plt.axis('off')\n",
-            "\n",
-            "plt.subplot(1, 2, 2)\n",
-            "plt.imshow(image_conv)\n",
-            "plt.axis('off')\n",
-            "\n",
-            "plt.show()\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3546,27 +3524,10 @@
         "os.environ['OPENAI_API_KEY'] = openai.api_key"
       ],
       "metadata": {
-        "id": "IeXrze0p5sVX",
-        "outputId": "9ab5a9d0-91df-4aa6-ed2c-9b8dd825d6e9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 218
-        }
+        "id": "IeXrze0p5sVX"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-4705da80fb2d>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'OPENAI_API_KEY'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopenai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'openai' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
