--- a/IMT_CV_GridSearch_Lab.ipynb
+++ b/IMT_CV_GridSearch_Lab.ipynb
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "pL7ye2mQYl9i"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
         "id": "6yN2lkECd-nA",
         "outputId": "0796095b-31e5-40a3-f7bd-2fab16beab76"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +530,7 @@
         "id": "90XE7rkmr9u8",
         "outputId": "ac921af3-d95b-404b-edb5-9b2f342a6493"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,7 +578,7 @@
         "id": "MZ3ipbT8t89B",
         "outputId": "01d3ccba-1417-4127-a37e-605e8db97816"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,11 +622,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "9O0EeuDmscmP",
         "outputId": "8328428e-860b-41f7-c955-c639f1860139"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,6 +636,36 @@
           },
           "metadata": {},
           "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown check\n",
+        "if list(df.columns[0:3]) != ['Mg_B', 'Mg_C', 'Mg_D']:\n",
+        "  print(\"Coloque os atributos 'Mg_B', 'Mg_C', 'Mg_D' primeiro no seu DataFrame\")\n",
+        "else:\n",
+        "  print('True')\n",
+        "\n",
+        "# Apenas para garantia da reprodução dos resultados. Uma ordem diferente, pode diferir no conjunto de treinamento e teste obtido"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9C60gosZXtcz",
+        "outputId": "9c09bd54-c09d-4053-8567-7605f31fe5db"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
         }
       ]
     },
@@ -696,7 +725,7 @@
         "id": "7ouesTfCth5u",
         "outputId": "f26cb4d2-2d1c-489b-886f-e2733a6f61ea"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +801,7 @@
         "id": "C8I9ZzEou6Ws",
         "outputId": "892e2608-f3d9-4437-f1ab-44a63befcd46"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +846,7 @@
         "id": "0IvKwRhwqBKB",
         "outputId": "4bf0cf2a-5f0a-4029-f6c1-17cbccdebef5"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1155,7 +1184,7 @@
       "metadata": {
         "id": "i01YBMcmqaFW"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     }
   ]
